packages/ipp/src/ImagProc/Ipp/ptr_adapt.h

/* generated automatically by adapter.hs */

int ippiAdd_8u_C1RSfsx(unsigned char*, int, unsigned char*, int, unsigned char*, int, void*, int);
int ippiSub_8u_C1RSfsx(unsigned char*, int, unsigned char*, int, unsigned char*, int, void*, int);
int ippiAddC_8u_C1RSfsx(unsigned char*, int, unsigned char, unsigned char*, int, void*, int);
int ippiSubC_8u_C1RSfsx(unsigned char*, int, unsigned char, unsigned char*, int, void*, int);
int ippiAddC_32f_C1Rx(float*, int, float, float*, int, void*);
int ippiMulC_32f_C1Rx(float*, int, float, float*, int, void*);
int ippiAdd_32f_C1Rx(float*, int, float*, int, float*, int, void*);
int ippiSub_32f_C1Rx(float*, int, float*, int, float*, int, void*);
int ippiMul_32f_C1Rx(float*, int, float*, int, float*, int, void*);
int ippiDiv_32f_C1Rx(float*, int, float*, int, float*, int, void*);
int ippiAbs_32f_C1Rx(float*, int, float*, int, void*);
int ippiSqrt_32f_C1Rx(float*, int, float*, int, void*);
int ippiMagnitudePack_32f_C1Rx(float*, int, float*, int, void*);
int ippiFFTInitAlloc_R_32fx(void**, int, int, int, int);
int ippiFFTFree_R_32fx(void*);
int ippiFFTGetBufSize_R_32fx(void*, int*);
int ippiFFTFwd_RToPack_32f_C1Rx(float*, int, float*, int, void*, unsigned char*);
int ippiMirror_8u_C1Rx(unsigned char*, int, unsigned char*, int, void*, int);
int ippiRemap_8u_C1Rx(unsigned char*, void*, int, void*, float*, int, float*, int, unsigned char*, int, void*, int);
int ippiRemap_8u_C3Rx(unsigned char*, void*, int, void*, float*, int, float*, int, unsigned char*, int, void*, int);
int ippiRemap_32f_C1Rx(float*, void*, int, void*, float*, int, float*, int, float*, int, void*, int);
int ippiSum_8u_C1Rx(unsigned char*, int, void*, double*);
int ippiSum_32f_C1Rx(float*, int, void*, double*, int);
int ippiHistogramRange_8u_C1Rx(unsigned char*, int, void*, int*, int*, int);
int ippiFilterMedian_8u_C1Rx(unsigned char*, int, unsigned char*, int, void*, void*, void*);
int ippiFilterMax_8u_C1Rx(unsigned char*, int, unsigned char*, int, void*, void*, void*);
int ippiFilterMax_32f_C1Rx(float*, int, float*, int, void*, void*, void*);
int ippiFilterMin_8u_C1Rx(unsigned char*, int, unsigned char*, int, void*, void*, void*);
int ippiFilterMin_32f_C1Rx(float*, int, float*, int, void*, void*, void*);
int ippiFilterBox_8u_C1Rx(unsigned char*, int, unsigned char*, int, void*, void*, void*);