packages/ipp/src/ImagProc/Ipp/Adapt.hs

-- generated automatically by adapter.hs

{-# LANGUAGE ForeignFunctionInterface #-}
{-# OPTIONS #-}

module ImagProc.Ipp.Adapt where

import Foreign
import Foreign.C.Types
import ImagProc.Ipp.Structs

foreign import ccall "ippiAdd_8u_C1RSfsx"
    ippiAdd_8u_C1RSfsx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> Int -> IO CInt
ippiAdd_8u_C1RSfs pSrc1 src1Step pSrc2 src2Step pDst dstStep roiSize scaleFactor = do
    proiSize <- new roiSize
    r <- ippiAdd_8u_C1RSfsx pSrc1 src1Step pSrc2 src2Step pDst dstStep proiSize scaleFactor
    free proiSize
    return r

foreign import ccall "ippiSub_8u_C1RSfsx"
    ippiSub_8u_C1RSfsx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> Int -> IO CInt
ippiSub_8u_C1RSfs pSrc1 src1Step pSrc2 src2Step pDst dstStep roiSize scaleFactor = do
    proiSize <- new roiSize
    r <- ippiSub_8u_C1RSfsx pSrc1 src1Step pSrc2 src2Step pDst dstStep proiSize scaleFactor
    free proiSize
    return r

foreign import ccall "ippiAddC_8u_C1RSfsx"
    ippiAddC_8u_C1RSfsx :: Ptr Word8 -> Int -> Word8 -> Ptr Word8 -> Int -> Ptr IppiSize -> Int -> IO CInt
ippiAddC_8u_C1RSfs pSrc srcStep value pDst dstStep roiSize scaleFactor = do
    proiSize <- new roiSize
    r <- ippiAddC_8u_C1RSfsx pSrc srcStep value pDst dstStep proiSize scaleFactor
    free proiSize
    return r

foreign import ccall "ippiSubC_8u_C1RSfsx"
    ippiSubC_8u_C1RSfsx :: Ptr Word8 -> Int -> Word8 -> Ptr Word8 -> Int -> Ptr IppiSize -> Int -> IO CInt
ippiSubC_8u_C1RSfs pSrc srcStep value pDst dstStep roiSize scaleFactor = do
    proiSize <- new roiSize
    r <- ippiSubC_8u_C1RSfsx pSrc srcStep value pDst dstStep proiSize scaleFactor
    free proiSize
    return r

foreign import ccall "ippiAddC_32f_C1Rx"
    ippiAddC_32f_C1Rx :: Ptr Float -> Int -> Float -> Ptr Float -> Int -> Ptr IppiSize -> IO CInt
ippiAddC_32f_C1R pSrc srcStep value pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiAddC_32f_C1Rx pSrc srcStep value pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiMulC_32f_C1Rx"
    ippiMulC_32f_C1Rx :: Ptr Float -> Int -> Float -> Ptr Float -> Int -> Ptr IppiSize -> IO CInt
ippiMulC_32f_C1R pSrc srcStep value pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiMulC_32f_C1Rx pSrc srcStep value pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiAdd_32f_C1Rx"
    ippiAdd_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> IO CInt
ippiAdd_32f_C1R pSrc1 src1Step pSrc2 src2Step pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiAdd_32f_C1Rx pSrc1 src1Step pSrc2 src2Step pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiSub_32f_C1Rx"
    ippiSub_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> IO CInt
ippiSub_32f_C1R pSrc1 src1Step pSrc2 src2Step pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiSub_32f_C1Rx pSrc1 src1Step pSrc2 src2Step pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiMul_32f_C1Rx"
    ippiMul_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> IO CInt
ippiMul_32f_C1R pSrc1 src1Step pSrc2 src2Step pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiMul_32f_C1Rx pSrc1 src1Step pSrc2 src2Step pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiDiv_32f_C1Rx"
    ippiDiv_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> IO CInt
ippiDiv_32f_C1R pSrc1 src1Step pSrc2 src2Step pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiDiv_32f_C1Rx pSrc1 src1Step pSrc2 src2Step pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiAbs_32f_C1Rx"
    ippiAbs_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> IO CInt
ippiAbs_32f_C1R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiAbs_32f_C1Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiSqrt_32f_C1Rx"
    ippiSqrt_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> IO CInt
ippiSqrt_32f_C1R pSrc srcStep pDst dstStep roiSize = do
    proiSize <- new roiSize
    r <- ippiSqrt_32f_C1Rx pSrc srcStep pDst dstStep proiSize
    free proiSize
    return r

foreign import ccall "ippiMagnitudePack_32f_C1Rx"
    ippiMagnitudePack_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> IO CInt
ippiMagnitudePack_32f_C1R pSrc srcStep pDst dstStep dstRoiSize = do
    pdstRoiSize <- new dstRoiSize
    r <- ippiMagnitudePack_32f_C1Rx pSrc srcStep pDst dstStep pdstRoiSize
    free pdstRoiSize
    return r

foreign import ccall "ippiFFTInitAlloc_R_32fx"
    ippiFFTInitAlloc_R_32fx :: Ptr () -> Int -> Int -> Int -> CInt -> IO CInt
ippiFFTInitAlloc_R_32f pFFTSpec orderX orderY flag hint = do
    r <- ippiFFTInitAlloc_R_32fx pFFTSpec orderX orderY flag hint
    return r

foreign import ccall "ippiFFTFree_R_32fx"
    ippiFFTFree_R_32fx :: Ptr () -> IO CInt
ippiFFTFree_R_32f pFFTSpec = do
    r <- ippiFFTFree_R_32fx pFFTSpec
    return r

foreign import ccall "ippiFFTGetBufSize_R_32fx"
    ippiFFTGetBufSize_R_32fx :: Ptr () -> Ptr CInt -> IO CInt
ippiFFTGetBufSize_R_32f pFFTSpec pSize = do
    r <- ippiFFTGetBufSize_R_32fx pFFTSpec pSize
    return r

foreign import ccall "ippiFFTFwd_RToPack_32f_C1Rx"
    ippiFFTFwd_RToPack_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr () -> Ptr Word8 -> IO CInt
ippiFFTFwd_RToPack_32f_C1R pSrc srcStep pDst dstStep pFFTSpec pBuffer = do
    r <- ippiFFTFwd_RToPack_32f_C1Rx pSrc srcStep pDst dstStep pFFTSpec pBuffer
    return r

foreign import ccall "ippiMirror_8u_C1Rx"
    ippiMirror_8u_C1Rx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> CInt -> IO CInt
ippiMirror_8u_C1R pSrc srcStep pDst dstStep roiSize flip = do
    proiSize <- new roiSize
    r <- ippiMirror_8u_C1Rx pSrc srcStep pDst dstStep proiSize flip
    free proiSize
    return r

foreign import ccall "ippiRemap_8u_C1Rx"
    ippiRemap_8u_C1Rx :: Ptr Word8 -> Ptr IppiSize -> Int -> Ptr IppiRect -> Ptr Float -> Int -> Ptr Float -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> Int -> IO CInt
ippiRemap_8u_C1R pSrc srcSize srcStep srcROI pxMap xMapStep pyMap yMapStep pDst dstStep dstRoiSize interpolation = do
    psrcSize <- new srcSize
    psrcROI <- new srcROI
    pdstRoiSize <- new dstRoiSize
    r <- ippiRemap_8u_C1Rx pSrc psrcSize srcStep srcROI pxMap xMapStep pyMap yMapStep pDst dstStep pdstRoiSize interpolation
    free psrcSize
    free psrcROI
    free pdstRoiSize
    return r

foreign import ccall "ippiRemap_8u_C3Rx"
    ippiRemap_8u_C3Rx :: Ptr Word8 -> Ptr IppiSize -> Int -> Ptr IppiRect -> Ptr Float -> Int -> Ptr Float -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> Int -> IO CInt
ippiRemap_8u_C3R pSrc srcSize srcStep srcROI pxMap xMapStep pyMap yMapStep pDst dstStep dstRoiSize interpolation = do
    psrcSize <- new srcSize
    psrcROI <- new srcROI
    pdstRoiSize <- new dstRoiSize
    r <- ippiRemap_8u_C3Rx pSrc psrcSize srcStep srcROI pxMap xMapStep pyMap yMapStep pDst dstStep pdstRoiSize interpolation
    free psrcSize
    free psrcROI
    free pdstRoiSize
    return r

foreign import ccall "ippiRemap_32f_C1Rx"
    ippiRemap_32f_C1Rx :: Ptr Float -> Ptr IppiSize -> Int -> Ptr IppiRect -> Ptr Float -> Int -> Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> Int -> IO CInt
ippiRemap_32f_C1R pSrc srcSize srcStep srcROI pxMap xMapStep pyMap yMapStep pDst dstStep dstRoiSize interpolation = do
    psrcSize <- new srcSize
    psrcROI <- new srcROI
    pdstRoiSize <- new dstRoiSize
    r <- ippiRemap_32f_C1Rx pSrc psrcSize srcStep srcROI pxMap xMapStep pyMap yMapStep pDst dstStep pdstRoiSize interpolation
    free psrcSize
    free psrcROI
    free pdstRoiSize
    return r

foreign import ccall "ippiSum_8u_C1Rx"
    ippiSum_8u_C1Rx :: Ptr Word8 -> Int -> Ptr IppiSize -> Ptr Double -> IO CInt
ippiSum_8u_C1R pSrc srcStep roiSize pSum = do
    proiSize <- new roiSize
    r <- ippiSum_8u_C1Rx pSrc srcStep proiSize pSum
    free proiSize
    return r

foreign import ccall "ippiSum_32f_C1Rx"
    ippiSum_32f_C1Rx :: Ptr Float -> Int -> Ptr IppiSize -> Ptr Double -> CInt -> IO CInt
ippiSum_32f_C1R pSrc srcStep roiSize pSum hint = do
    proiSize <- new roiSize
    r <- ippiSum_32f_C1Rx pSrc srcStep proiSize pSum hint
    free proiSize
    return r

foreign import ccall "ippiHistogramRange_8u_C1Rx"
    ippiHistogramRange_8u_C1Rx :: Ptr Word8 -> Int -> Ptr IppiSize -> Ptr Int32 -> Ptr Int32 -> Int -> IO CInt
ippiHistogramRange_8u_C1R pSrc srcStep roiSize pHist pLevels nLevels = do
    proiSize <- new roiSize
    r <- ippiHistogramRange_8u_C1Rx pSrc srcStep proiSize pHist pLevels nLevels
    free proiSize
    return r

foreign import ccall "ippiFilterMedian_8u_C1Rx"
    ippiFilterMedian_8u_C1Rx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> Ptr IppiSize -> Ptr IppiPoint -> IO CInt
ippiFilterMedian_8u_C1R pSrc srcStep pDst dstStep dstRoiSize maskSize anchor = do
    pdstRoiSize <- new dstRoiSize
    pmaskSize <- new maskSize
    panchor <- new anchor
    r <- ippiFilterMedian_8u_C1Rx pSrc srcStep pDst dstStep pdstRoiSize pmaskSize panchor
    free pdstRoiSize
    free pmaskSize
    free panchor
    return r

foreign import ccall "ippiFilterMax_8u_C1Rx"
    ippiFilterMax_8u_C1Rx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> Ptr IppiSize -> Ptr IppiPoint -> IO CInt
ippiFilterMax_8u_C1R pSrc srcStep pDst dstStep dstRoiSize maskSize anchor = do
    pdstRoiSize <- new dstRoiSize
    pmaskSize <- new maskSize
    panchor <- new anchor
    r <- ippiFilterMax_8u_C1Rx pSrc srcStep pDst dstStep pdstRoiSize pmaskSize panchor
    free pdstRoiSize
    free pmaskSize
    free panchor
    return r

foreign import ccall "ippiFilterMax_32f_C1Rx"
    ippiFilterMax_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> Ptr IppiSize -> Ptr IppiPoint -> IO CInt
ippiFilterMax_32f_C1R pSrc srcStep pDst dstStep dstRoiSize maskSize anchor = do
    pdstRoiSize <- new dstRoiSize
    pmaskSize <- new maskSize
    panchor <- new anchor
    r <- ippiFilterMax_32f_C1Rx pSrc srcStep pDst dstStep pdstRoiSize pmaskSize panchor
    free pdstRoiSize
    free pmaskSize
    free panchor
    return r

foreign import ccall "ippiFilterMin_8u_C1Rx"
    ippiFilterMin_8u_C1Rx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> Ptr IppiSize -> Ptr IppiPoint -> IO CInt
ippiFilterMin_8u_C1R pSrc srcStep pDst dstStep dstRoiSize maskSize anchor = do
    pdstRoiSize <- new dstRoiSize
    pmaskSize <- new maskSize
    panchor <- new anchor
    r <- ippiFilterMin_8u_C1Rx pSrc srcStep pDst dstStep pdstRoiSize pmaskSize panchor
    free pdstRoiSize
    free pmaskSize
    free panchor
    return r

foreign import ccall "ippiFilterMin_32f_C1Rx"
    ippiFilterMin_32f_C1Rx :: Ptr Float -> Int -> Ptr Float -> Int -> Ptr IppiSize -> Ptr IppiSize -> Ptr IppiPoint -> IO CInt
ippiFilterMin_32f_C1R pSrc srcStep pDst dstStep dstRoiSize maskSize anchor = do
    pdstRoiSize <- new dstRoiSize
    pmaskSize <- new maskSize
    panchor <- new anchor
    r <- ippiFilterMin_32f_C1Rx pSrc srcStep pDst dstStep pdstRoiSize pmaskSize panchor
    free pdstRoiSize
    free pmaskSize
    free panchor
    return r

foreign import ccall "ippiFilterBox_8u_C1Rx"
    ippiFilterBox_8u_C1Rx :: Ptr Word8 -> Int -> Ptr Word8 -> Int -> Ptr IppiSize -> Ptr IppiSize -> Ptr IppiPoint -> IO CInt
ippiFilterBox_8u_C1R pSrc srcStep pDst dstStep dstRoiSize maskSize anchor = do
    pdstRoiSize <- new dstRoiSize
    pmaskSize <- new maskSize
    panchor <- new anchor
    r <- ippiFilterBox_8u_C1Rx pSrc srcStep pDst dstStep pdstRoiSize pmaskSize panchor
    free pdstRoiSize
    free pmaskSize
    free panchor
    return r
